--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,10 @@ dependencies {
     compile "com.android.support:design:$supportLibraryVersion"
     compile "com.android.support:support-v4:$supportLibraryVersion"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
