--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,12 @@ ext {
 
 
 dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 
+    compile 'com.getbase:floatingactionbutton:1.9.0'
 
     compile "com.jakewharton:butterknife:$butterknifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
@@ -44,6 +49,14 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+
+    compile 'com.wdullaer:materialdatetimepicker:1.2.1'
+    compile 'com.bignerdranch.android:recyclerview-multiselect:+'
+    compile 'com.wrapp.floatlabelededittext:library:0.0.6'
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    testCompile 'junit:junit:4.12'
+    compile files('libs/poi-3.7.jar')
+
 }
 
 
