designing in process

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".SignUpActivity" />
         <activity android:name=".fragments.CodeItOut" />
         <activity android:name=".FinalActivity.Codex"></activity>
+        <activity android:name=".Developers2"></activity>
         <activity android:name=".fragments.ShareFragment" android:theme="@style/ListFont"></activity>
 
 
